# car_thang

./: .gitignore  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  car-thang.nix  docker-compose.yml  entrypoint.sh
app/: thang.nix
app/src/: authentification.rs  playback_controls.rs
install/: install.py  install.sh  superbird_device.py
install/env/: initrd_install.txt  initrd_net.txt  initrd_no_net.txt
install/scripts/: iptables.sh
nix/: flake.nix
nix/initrd/: initrd.nix  initrd.sh
nix/os/: connectivity.nix  env.nix  fun.nix  gui.nix  nixos.nix  profile.nix
nix/resources/: env_p2.txt  meson-g12a-superbird.dtb  stock_dtb.img  superbird_defconfig
nix/resources/ssh/: ssh_host_ed25519_key.pub  ssh_host_rsa_key
nix/secrets/: secrets.nix  spotify-env.age
nix/shared/: make-btrfs-fs.nix  mkfs-btrfs-force-root-ownership.patch  options.nix  sys.nix
nixos/: flake.nix
nixos-superbird/: flake.nix
nixos-superbird/nixos/: env.nix  gui.nix  net.nix  profile.nix  superbird.nix  sys.nix  user.nix
nixos-superbird/resources/: superbird_defconfig
nixos-superbird/secrets/: secrets.nix
nixos/initrd/: initrd.sh
nixos/os/: connectivity.nix  gui.nix  nixos.nix  user.nix
nixos/resources/: env_p2.txt  superbird_defconfig
nixos/resources/ssh/: ssh_host_ed25519_key  ssh_host_rsa_key.pub
nixos/shared/: options.nix
qemu/: qemu-install.sh  qemu-root.sh
src/: authentification.rs  main.rs  playback_controls.rs
ui/: app-window.slint
