[package]
name = "car_thang"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
env_file = "0.1.3"
env_logger = "0.11.5"
rspotify = { version = "0.13.3", features = [
    "cli",
    "client-reqwest",
    "env-file",
] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.4.0"
