[package]
name = "car_thang"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
env_file = "0.1.3"
env_logger = "0.11.5"
image = "0.25.4"
reqwest = "0.12.9"
rspotify = { version = "0.13.3", features = [
    "cli",
    "client-reqwest",
    "env-file",
] }
slint = "1.8.0"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.4.0"

[build-dependencies]
slint-build = "1.8.0"
